@@ -1,6 +1,7 @@
 package com.libras.backend.config;
 
 import com.libras.backend.model.quiz.Opcao;
+import com.libras.backend.model.quiz.TipoPergunta;
 import com.libras.backend.service.PerguntaService;
 import com.libras.backend.model.quiz.Pergunta;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,9 +10,11 @@ import org.springframework.boot.ApplicationRunner;
 import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Component
 public class QuizDataInitializer implements ApplicationRunner {
+
     private final PerguntaService perguntaService;
 
     public QuizDataInitializer(PerguntaService perguntaService) {
@@ -20,25 +23,33 @@ public class QuizDataInitializer implements ApplicationRunner {
 
     @Override
     public void run(ApplicationArguments args) {
-        // Exemplo de pergunta 1
+
+        if (!perguntaService.listarTodas().isEmpty()) {
+            return;
+        }
+
+// IMAGEM → TEXTO
         Pergunta p1 = new Pergunta();
-        p1.setSinalUrl("/sinais/oQuarto.js");
-        p1.setIndiceCorreto(1);
-        // Usa o novo construtor de conveniência
-        Opcao o1a = new Opcao("um");
-        Opcao o1b = new Opcao("quatro");
-        Opcao o1c = new Opcao("dez");
-        p1.setOpcoes(Arrays.asList(o1a, o1b, o1c));
+        p1.setTipo(TipoPergunta.IMAGEM_PARA_TEXTO);
+        p1.setPrompt("/images/oi.png");
+        p1.setIndiceCorreto(0);
+        p1.setOpcoes(List.of(
+                new Opcao("Oi"),
+                new Opcao("Tchau"),
+                new Opcao("Bom dia")
+        ));
         perguntaService.salvar(p1);
 
-        // Exemplo de pergunta 2
+        // TEXTO → IMAGEM
         Pergunta p2 = new Pergunta();
-        p2.setSinalUrl("/sinais/ondeEstaMinhaMao.js");
-        p2.setIndiceCorreto(0);
-        Opcao o2a = new Opcao("mão");
-        Opcao o2b = new Opcao("braço");
-        Opcao o2c = new Opcao("ombro");
-        p2.setOpcoes(Arrays.asList(o2a, o2b, o2c));
+        p2.setTipo(TipoPergunta.TEXTO_PARA_IMAGEM);
+        p2.setPrompt("Obrigado");
+        p2.setIndiceCorreto(2);
+        p2.setOpcoes(List.of(
+                new Opcao("/images/obrigado1.png"),
+                new Opcao("/images/obrigado2.png"),
+                new Opcao("/images/obrigado3.png")
+        ));
         perguntaService.salvar(p2);
 
         // Adicione quantas perguntas quiser do mesmo jeito…
